Add hexahedron example

--- a/cgal_related/.gitignore
+++ b/cgal_related/.gitignore
@@ -5,4 +5,4 @@ AABB_triangle_3_example
 box_d_do_intersect_polylines
 minimum_enclosing_rectangle_2
 minimum_enclosing_strip_2
-
+polyhedron_prog_cube
